@@ -12,6 +12,7 @@
   * XML::Node#previous_element implemented
   * Rubinius support
   * Ths CSS selector engine now supports :has()
+  * XML::NodeSet#filter() was added
 
 * Bugfixes
 
